--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <!-- TODO Migrate to 7.6.0+ -->
         <pmd.version>6.55.0</pmd.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.github.repository>microsoft/gctoolkit</project.github.repository>
+        <project.github.repository>dsgrieve/gctoolkit</project.github.repository>
         <repository.url>git@github.com:${project.github.repository}.git</repository.url>
         <spotbugs.version>4.8.6</spotbugs.version>
     </properties>
