--- a/gclogs/pom.xml
+++ b/gclogs/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.microsoft.gctoolkit</groupId>
         <artifactId>gctoolkit</artifactId>
-        <version>3.0.5-SNAPSHOT</version>
+        <version>3.0.5</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
